--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
     ambassador, banon, brask, brya, clapper, coral, corsola, cyan, dedede, edgar, elm, enguarde, fizz,
     glimmer, grunt, hana, hatch, jacuzzi, kalista, kefka, kukui, lulu, nami, nissa, octopus, orco, puff,
-    pyro, reef, reks, relm, sand, sentry, stout, strongbad, tidus, trogdor, ultima, volteer, zork
+    pyro, reef, reks, relm, sand, sentry, snappy, stout, strongbad, tidus, trogdor, ultima, volteer, zork
     <p>
       First you need to download a SH1MMER bin at
       <a href="https://dl.sh1mmer.me">dl.sh1mmer.me</a>
